# omdash

./: .eslintrc.js  .gitignore  .prettierrc.toml  eslint.config.mjs  justfile  package-lock.json  package.json  spark.js  turbo.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/omdash-client/: omdash-client.service  package.json  tsconfig.json
apps/omdash-client-rs/: Cargo.toml  omdash-client-rs.service
apps/omdash-client-rs/src/: battery.rs  cpu.rs  disk.rs  gpu.rs  main.rs  memory.rs  processes.rs  protocol.rs  temperature.rs
apps/omdash-client/src/: client.ts
apps/omdash-client/src/processes/: index.ts
apps/omdash-client/src/rocm/: index.ts
apps/omdash-client/src/utils/: pick.ts  timers.ts
apps/omdash-frontend/: .env.development  .env.local  index.html  omdash-frontend.service  package.json  tsconfig.json  vite.config.ts
apps/omdash-frontend/src/: app.styles.ts  app.ts
apps/omdash-frontend/src/base/: OmdashComponent.ts
apps/omdash-frontend/src/components/: ago.ts  box.ts  cpu.ts  gauge.ts  global.ts  host.ts  line-graph.ts  link.ts  memory.ts  mount.ts  os-icon.ts  process-list.ts  time-series.ts
apps/omdash-frontend/src/controllers/: clock.ts  effects.ts
apps/omdash-frontend/src/css/: catppuccin.css  styles.css
apps/omdash-frontend/src/db/: IndexedDBStorage.ts
apps/omdash-frontend/src/decorators/: bind.ts  effect.ts
apps/omdash-frontend/src/routes/: hosts.ts  network.ts  settings.ts  spotify.ts
apps/omdash-server/: omdash-server.service  package.json
apps/omdash-server/src/: server.ts
(+59 files in other folders)
