[package]
name = "omdash-client-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
futures-util = "0.3.33"
nix = { version = "0.31.3", features = ["feature", "fs", "hostname"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sysinfo = "0.39.6"
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros", "time", "signal", "net", "process"] }
tokio-tungstenite = "0.30.0"
tpx-sysmon = { version = "0.1.0", path = "../../../tpx-sysmon" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
